Fix deprecated method usages.